# ci_cd_python

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  Taskfile.yaml  pyproject.toml  requirements.txt
src/character_counter/: counter.py
tests/: __init__.py  test_counter.py
